--- a/CSS3/Flexbox/style.css
+++ b/CSS3/Flexbox/style.css
@@ -8,16 +8,19 @@
     height:200px;
     background-color: red;
     color: black;
+    text-align: center;
 }
 .child-2 {
     width:200px;
     height:200px;
     background-color: green;
     color: black;
+    text-align: center;
 }
 .child-3 {
     width:200px;
     height:200px;
     background-color: blue;
     color: black;
+    text-align: center;
 }
