--- a/CSS3/Flexbox/style.css
+++ b/CSS3/Flexbox/style.css
@@ -3,7 +3,10 @@
     height: 1300px;
     border:1px solid red;
     display: flex;
-
+    flex-direction: row;
+    justify-content: center;
+    /* align-items: center; */
+    flex-wrap: wrap;
 }
 .child-1 {
     width:200px;
