--- a/CSS3/Flexbox/style.css
+++ b/CSS3/Flexbox/style.css
@@ -3,10 +3,6 @@
     height: 1300px;
     border:1px solid red;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    /* align-items: center; */
-    flex-wrap: wrap;
 }
 .child-1 {
     width:200px;
@@ -14,6 +10,8 @@
     background-color: red;
     color: black;
     text-align: center;
+    flex: 1;
+    order: 3;
 }
 .child-2 {
     width:200px;
@@ -21,6 +19,7 @@
     background-color: green;
     color: black;
     text-align: center;
+    order: 1;
 }
 .child-3 {
     width:200px;
@@ -28,4 +27,5 @@
     background-color: blue;
     color: black;
     text-align: center;
+    order: 2;
 }
