Practiced variables,nesting,mixins,inheritance and some the other concepts in SASS

--- a/CSS3/SASS/styles/style.css
+++ b/CSS3/SASS/styles/style.css
@@ -1,3 +1,18 @@
-h1 {
-  background: lightblue;
+header {
+  background-color: skyblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+header button {
+  background-color: yellow;
+}
+
+.contact {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.contact button {
+  background-color: yellow;
 }/*# sourceMappingURL=style.css.map */
